--- a/src/main/resources/templates/views/mst/sys/MSTSYS001M0.html
+++ b/src/main/resources/templates/views/mst/sys/MSTSYS001M0.html
@@ -19,7 +19,7 @@
                 id="filter-form"
                 name="form"
                 method="post"
-                action="/WRKFIL001M0SelectList"
+                action="/MSTSYS001M0SelectList"
                 onsubmit="return false;"
               >
                 <div class="row">
