--- a/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/layout}">
 <th:block layout:fragment="content">
+  <script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
+   <script
+      src="js/libs-tabler/nouislider/dist/nouislider.min.js?1692870487"
+      defer
+    ></script>
+    <script
+      src="js/libs-tabler/litepicker/dist/litepicker.js?1692870487"
+      defer
+    ></script>
+    <script
+      src="js/libs-tabler/tom-select/dist/js/tom-select.base.min.js?1692870487"
+      defer
+    ></script>
 	<div class="page-wrapper" id="page-wrapper">
 		<div class="container" id="'container">
 			<h2>Load History</h2>
