--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,7 @@
 		<div class="container-xl">
 			<div class="navbar-nav align-items-center flex-row order-md-last">
 				<span style="padding-left:30px;">
-				<a href="" class="link-light" style="text-decoration: none;">
+				<a href="#!" class="link-light" style="text-decoration: none;" onClick="goMenuPage('/views/user/myPage')">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-user-square-rounded"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 13a3 3 0 1 0 0 -6a3 3 0 0 0 0 6z" /><path d="M12 3c7.2 0 9 1.8 9 9s-1.8 9 -9 9s-9 -1.8 -9 -9s1.8 -9 9 -9z" /><path d="M6 20.05v-.05a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v.05" /></svg>
 					Mypage
 				</a>
@@ -32,15 +32,11 @@
 		</div>
 	</header>
 	<script>
-	function goMenuPage (pageName) {
-		$("#pageName").val(pageName);
-		$("#form").submit();
-	};
-	$(document).ready(function () {
-		$('#logoutButton').click(function(e){
-			e.preventDefault(); // 링크 기본 동작 방지
-			console.log("Pushed logoutButten.");
-			$.ajax({
+		$(document).ready(function () {
+			$('#logoutButton').click(function(e){
+				e.preventDefault(); // 링크 기본 동작 방지
+				console.log("Pushed logoutButten.");
+				$.ajax({
 					type: "GET",
 					url: "/auth/adamsLogout",
 					async: true,
@@ -48,16 +44,16 @@
 					contentType: "application/json; charset=utf-8",
 					success: function (response, textStatus, xhr) {
 						if(xhr.status == 200) {
-						console.log("Success Logout. Go to Login page.");
-						goMenuPage("/login");
+							console.log("Success Logout. Go to Login page.");
+							goMenuPage("/login");
 						}
 					},
 					error: function(xhr, textStatus, errorThrown) {
 						console.error('Request failed: ' + textStatus);
 					}
+				});
 			});
 		});
-	});
 	</script>
 </th:block>
 </html>
