--- a/src/main/resources/templates/views/biz/ins/BIZINS001M0.html
+++ b/src/main/resources/templates/views/biz/ins/BIZINS001M0.html
@@ -11,11 +11,43 @@
 					<div class="form-box">
 						<form id="filter-form" name="form" method="post" action="/BIZINS001M0SelectList" onsubmit="return false;">
 							<div class="row">
-								<div class="col-sm-6 col-md-3">
-									<input id="inpSearchTxt" name="inpSearchTxt" type="text" class="form-control p-1" placeholder="Account Title/Name" />
+								<!-- Year Select -->
+								<div class="col-auto">
+									<label class="form-label">Standard Year/Month:</label>
+									<select name="user[year]" class="form-select select-month-year p-1" id="inputYear">
+									<option selected value="">- Year -</option>
+									<!-- Year Options -->
+										<option value="2020">2020</option>
+										<option value="2021">2021</option>
+										<option value="2022">2022</option>
+										<option value="2023">2023</option>
+										<option value="2024">2024</option>
+										<option value="2025">2025</option>
+										<option value="2026">2026</option>
+									</select>
+								</div>
+								<!-- Month Select -->
+								<div class="col-auto">
+									<label class="form-label"> &nbsp; </label>
+									<select name="user[month]" class="form-select select-month-year p-1" id="inputMonth">
+									<option selected value="">- Month -</option>
+									<!-- Month Options -->
+									<option value="1">January</option>
+									<option value="2">February</option>
+									<option value="3">March</option>
+									<option value="4">April</option>
+									<option value="5">May</option>
+									<option value="6">June</option>
+									<option value="7">July</option>
+									<option value="8">August</option>
+									<option value="9">September</option>
+									<option value="10">October</option>
+									<option value="11">November</option>
+									<option value="12">December</option>
+									</select>
 								</div>
 								<div class="col-auto">
-									<button type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()">Search</button>
+									<button type="button" class="btn btn-primary search-button p-1" style="padding: 4px 10px; color: white; font-size: 13px" onclick="main()">Search</button>
 								</div>
 								<div class="col text-end">
 									<button form="new-form" type="button" class="btn btn-primary" style="padding: 4px 10px; color: white; font-size: 13px" onclick="getSummarize()" data-test="create-button" onsubmit="return false;">Summarize</button>
@@ -55,51 +87,61 @@
 		</div>
 	</div>
 	<script>
-        function checkData(data){
-            return parentCheckData(data, check_cols);
-        }
-        
-        function getList(input) {
-            console.log("getList input : " + input);
-            var option = {
-                           id          : "SelectList"
-                         , type        : "post"
-                         , url         : "/BIZINS001M0SelectList"
-                         , async       : false
-                         , dataType    : "json"
-                         , contentType : "application/json; charset=utf-8"
-                         , data        : input
-                         };
-            
-            gf_Transaction(option, fn_callback);
-        }
-        
-        // settle 함수에 보낼 데이터를 가져오는 함수
-        function getSummarize(){
-            addSlickGridSomeStyling();
-            var input = JSON.stringify({ searchTxt: $("#inpSearchTxt").val() });
-            //console.log("getsummarize input : " + input);
-        
-            summarize(input);
-        }
-        
-        function summarize(input) {
-            
-            //console.log("summarize input : " + input);
-            var option = {
-                           id          : "ExecuteList"
-                         , type        : "post"
-                         , url         : "/BIZINS001M0ExecuteList"
-                         , async       : false
-                         , dataType    : "text"
-                         , contentType : "application/json; charset=utf-8"
-                         , data        : input
-                         };
-            
-            gf_Transaction(option, fn_callback);
-        }
+		function checkData(data){
+			return parentCheckData(data, check_cols);
+		}
+		
+		function getStdYymm(){
+			var inputYear = $("#inputYear").val();
+			var inputMonth = $("#inputMonth").val();
+			var inputStdYymm = inputYear + ((inputMonth.length != 0) ? inputMonth.padStart(2, "0"): "");
+			if (inputStdYymm.length != 6){
+				inputStdYymm = null;
+			}
+			return inputStdYymm
+		}
+		
+		function getList(input) {
+			console.log("getList input : " + input);
+			var option = {
+							id			:	"SelectList"
+						,	type		:	"post"
+						,	url			:	"/BIZINS001M0SelectList"
+						,	async		:	false
+						,	dataType	:	"json"
+						,	contentType	:	"application/json; charset=utf-8"
+						,	data		:	input
+						};
+			
+			gf_Transaction(option, fn_callback);
+		}
+		
+		// settle 함수에 보낼 데이터를 가져오는 함수
+		function getSummarize(){
+			var inputStdYymm = getStdYymm();
+			var input = JSON.stringify({ stdYymm: inputStdYymm });
+			//console.log("getsummarize input : " + input);
+		
+			summarize(input);
+		}
+		
+		function summarize(input) {
+			
+			//console.log("summarize input : " + input);
+			var option = {
+							id			: "ExecuteList"
+						,	type		: "post"
+						,	url			: "/BIZINS001M0ExecuteList"
+						,	async		: false
+						,	dataType	: "text"
+						,	contentType	: "application/json; charset=utf-8"
+						,	data		: input
+						};
+			
+			gf_Transaction(option, fn_callback);
+		}
 
-    </script>
+	</script>
 	<script src="js/utils.js"></script>
 	<script>
 		$(document).ready(function() {
@@ -141,185 +183,186 @@
 				{id: "frstRegDtm",			name: "Registration Date",					field: "frstRegDtm",			width: 120, sortable: true, editor: Slick.Editors.Text, validator: createValidator, 								headerCssClass: "slick-header-columns", cssClass: "slick-column-center"}
 		];
 
-        var options = {
-            enableCellNavigation: true,
-            enableColumnReorder: false,
-            forceFitColumns: false,
-            multiColumnSort: true,
-            numberedMultiColumnSort: true,
-            tristateMultiColumnSort: true,
-            sortColNumberInSeparateSpan: true,
-            enableAutoSizeColumns: true,
-            editable: false,   // grid도 편집가능.. grid 편집 기능 제거 필요..
-            enableAddRow: true,
-            asyncEditorLoading: false,
-            autoEdit: false,
-            autoEditNewRow: false,
-            rowHeight: 35,
-        };
-        
-        var newRowIds = 0;
-    
-        var pluginOptions = {
-            clipboardCommandHandler: function(editCommand){ undoRedoBuffer.queueAndExecuteCommand.call(undoRedoBuffer,editCommand); },
-            readOnlyMode : false,
-            includeHeaderWhenCopying : false,
-            newRowCreator: function(count) {
-                for (var i = 0; i < count; i++) {
-                    var item = {
-                        id: "newRow_" + newRowIds++
-                    }
-                grid.getData().addItem(item);
-                }
-            }
-        };
-        
-        function main() {
-            // 그리드 초기화 및 데이터 로드
-            console.log("Initializing SlickGrid...");
-            getList(
-                        (input = JSON.stringify({ 
-                                                  searchTxt: $("#inpSearchTxt").val()
-                        }))
-                   );
-        }
+		var options = {
+			enableCellNavigation: true,
+			enableColumnReorder: false,
+			forceFitColumns: false,
+			multiColumnSort: true,
+			numberedMultiColumnSort: true,
+			tristateMultiColumnSort: true,
+			sortColNumberInSeparateSpan: true,
+			enableAutoSizeColumns: true,
+			editable: false,   // grid도 편집가능.. grid 편집 기능 제거 필요..
+			enableAddRow: true,
+			asyncEditorLoading: false,
+			autoEdit: false,
+			autoEditNewRow: false,
+			rowHeight: 35,
+		};
+		
+		var newRowIds = 0;
+	
+		var pluginOptions = {
+			clipboardCommandHandler: function(editCommand){ undoRedoBuffer.queueAndExecuteCommand.call(undoRedoBuffer,editCommand); },
+			readOnlyMode : false,
+			includeHeaderWhenCopying : false,
+			newRowCreator: function(count) {
+				for (var i = 0; i < count; i++) {
+					var item = {
+						id: "newRow_" + newRowIds++
+					}
+				grid.getData().addItem(item);
+				}
+			}
+		};
+		
+		function main() {
+			// 그리드 초기화 및 데이터 로드
+			console.log("Initializing SlickGrid...");
+			var inputStdYymm = getStdYymm();
+			getList(
+						(input = JSON.stringify({ 
+												  stdYymm: inputStdYymm 
+						}))
+				   );
+		}
 
-        /**
-         * Transaction callback 함수
-         **/
-        function fn_callback(result){
-           console.log("fn_callback : " + result.id);
-             if( result.resultCd == "S" ){
-                    
-                 switch (result.id){
-                     case "SelectList" :
-                         
-                         fn_setGrid(result.data);
-                         
-                     break;
-                     case "ExecuteList" :
-                         console.log("executeList case");
-                         main();
-                     break;
-                 }      
-             } else if( result.resultCd == "E") {
-                 
-            } else {
-                 console.log("fn_callback result : ", result);
-              }
-         }
+		/**
+		 * Transaction callback 함수
+		 **/
+		function fn_callback(result){
+		   console.log("fn_callback : " + result.id);
+			 if( result.resultCd == "S" ){
+					
+				 switch (result.id){
+					 case "SelectList" :
+						 
+						 fn_setGrid(result.data);
+						 
+					 break;
+					 case "ExecuteList" :
+						 console.log("executeList case");
+						 main();
+					 break;
+				 }	  
+			 } else if( result.resultCd == "E") {
+				 
+			} else {
+				 console.log("fn_callback result : ", result);
+			  }
+		 }
 
-	       function fn_setGrid(data){
-	            
-	            dataView = new Slick.Data.DataView( { idField: unqId });
-	            grid     = new Slick.Grid("#divMyGrid", dataView, columns, options);
-	            
-	            // Make the grid respond to DataView change events.
-	            dataView.onRowCountChanged.subscribe(function (e, args) {
-	                grid.updateRowCount();
-	                grid.render();
-	            });
-	            
-	            dataView.onRowsChanged.subscribe(function (e, args) {
-	                grid.invalidate();
-	                grid.render();
-	        });
-                    
-	        // setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
-	        dataView.setItems(data, unqId);
-	        
-	        // when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
-	        grid.onBeforeSort.subscribe(function (e, args) {
-	            return true;
-	        });                   
-	      
+		   function fn_setGrid(data){
+				
+				dataView = new Slick.Data.DataView( { idField: unqId });
+				grid	 = new Slick.Grid("#divMyGrid", dataView, columns, options);
+				
+				// Make the grid respond to DataView change events.
+				dataView.onRowCountChanged.subscribe(function (e, args) {
+					grid.updateRowCount();
+					grid.render();
+				});
+				
+				dataView.onRowsChanged.subscribe(function (e, args) {
+					grid.invalidate();
+					grid.render();
+			});
+					
+			// setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
+			dataView.setItems(data, unqId);
+			
+			// when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
+			grid.onBeforeSort.subscribe(function (e, args) {
+				return true;
+			});				   
+		  
 	
-	       // 정렬
-	       grid.onSort.subscribe(function (e, args) {
-	         var cols = args.sortCols;
+		   // 정렬
+		   grid.onSort.subscribe(function (e, args) {
+			 var cols = args.sortCols;
 	
-	         data.sort(function (dataRow1, dataRow2) {
-	           for (var i = 0, l = cols.length; i < l; i++) {
-	                var field  = cols[i].sortCol.field;
-	                var sign   = cols[i].sortAsc ? 1 : -1;
-	                var value1 = dataRow1[field],
-	                    value2 = dataRow2[field];
-	                var result =
-	               (value1 == value2 ? 0 : value1 > value2 ? 1 : -1) * sign;
-	             if (result != 0) {
-	               return result;
-	             }
-	           }
-	          return 0;
-	         });
+			 data.sort(function (dataRow1, dataRow2) {
+			   for (var i = 0, l = cols.length; i < l; i++) {
+					var field  = cols[i].sortCol.field;
+					var sign   = cols[i].sortAsc ? 1 : -1;
+					var value1 = dataRow1[field],
+						value2 = dataRow2[field];
+					var result =
+				   (value1 == value2 ? 0 : value1 > value2 ? 1 : -1) * sign;
+				 if (result != 0) {
+				   return result;
+				 }
+			   }
+			  return 0;
+			 });
 	
-	        grid.render();
-	      });
+			grid.render();
+		  });
 	
-	      grid.setSelectionModel(new Slick.CellSelectionModel());
-	      grid.registerPlugin(new Slick.AutoTooltips());
+		  grid.setSelectionModel(new Slick.CellSelectionModel());
+		  grid.registerPlugin(new Slick.AutoTooltips());
 	
-	      // set keyboard focus on the grid
-	      //grid.getCanvasNode().focus();
-	      grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
+		  // set keyboard focus on the grid
+		  //grid.getCanvasNode().focus();
+		  grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
 	
-	      grid.onAddNewRow.subscribe(function (e, args) {
-	          var newItem = args.item;
-	          var column = args.column;
-	          dataView.beginUpdate();
-	          dataView.setItems(data);
-	          dataView.endUpdate();
-	          grid.updateRowCount();
-	          grid.render();
-	      });
+		  grid.onAddNewRow.subscribe(function (e, args) {
+			  var newItem = args.item;
+			  var column = args.column;
+			  dataView.beginUpdate();
+			  dataView.setItems(data);
+			  dataView.endUpdate();
+			  grid.updateRowCount();
+			  grid.render();
+		  });
 	
-	      grid.onBeforeEditCell.subscribe(function (e, args) {
-	        console.log("onBeforeEditCell");
-	      });
+		  grid.onBeforeEditCell.subscribe(function (e, args) {
+			console.log("onBeforeEditCell");
+		  });
 	
-	        grid.onCellChange.subscribe(function (e, args) {
-	            dataView.beginUpdate();
-	            dataView.setItems(data);
-	            dataView.endUpdate();
-	            grid.updateRowCount();
-	            grid.render();
-	        });
+			grid.onCellChange.subscribe(function (e, args) {
+				dataView.beginUpdate();
+				dataView.setItems(data);
+				dataView.endUpdate();
+				grid.updateRowCount();
+				grid.render();
+			});
 	
-	      grid.onValidationError.subscribe(function (e, args) {
-	        // handle validation errors originating from the CompositeEditor
-	        if (args.validationResults) {
-	          let errorMsg = args.validationResults.msg || "";
-	          if (args.editor && args.editor instanceof Slick.CompositeEditor) {
-	            if (args.validationResults.errors) {
-	              errorMsg += "\n";
-	              args.validationResults.errors.forEach(function (
-	                error,
-	                errorIndex
-	              ) {
-	                const columnName = error.editor.args.column.id;
-	                errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
-	              });
-	            }
-	            console.log(errorMsg);
-	          }
-	        } else {
-	          alert(errorMessages);
-	        }
-	      });
+		  grid.onValidationError.subscribe(function (e, args) {
+			// handle validation errors originating from the CompositeEditor
+			if (args.validationResults) {
+			  let errorMsg = args.validationResults.msg || "";
+			  if (args.editor && args.editor instanceof Slick.CompositeEditor) {
+				if (args.validationResults.errors) {
+				  errorMsg += "\n";
+				  args.validationResults.errors.forEach(function (
+					error,
+					errorIndex
+				  ) {
+					const columnName = error.editor.args.column.id;
+					errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
+				  });
+				}
+				console.log(errorMsg);
+			  }
+			} else {
+			  alert(errorMessages);
+			}
+		  });
 	
-	      grid.setActiveCell(0, 0);
-	      console.log("SlickGrid initialized.");
-	      }     
+		  grid.setActiveCell(0, 0);
+		  console.log("SlickGrid initialized.");
+		  }	 
 
-        // Download Excel functionality
-        document.getElementById('downloadExcel').addEventListener('click', function() {
-            const currDate = getCurrentDateTime();
-            const fileName = 'BIZINS001_FM_' + currDate; // 원하는 파일 이름으로 변경 가능
-            const sheetName = '보험손익(BEL)'; // 시트 이름
-            const gridColumns = columns; // SlickGrid의 컬럼 배열
-            const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
-            exportToExcel(fileName, sheetName, gridColumns, gridData);
-        });
-    </script>
+		// Download Excel functionality
+		document.getElementById('downloadExcel').addEventListener('click', function() {
+			const currDate = getCurrentDateTime();
+			const fileName = 'BIZINS001_FM_' + currDate; // 원하는 파일 이름으로 변경 가능
+			const sheetName = '보험손익(BEL)'; // 시트 이름
+			const gridColumns = columns; // SlickGrid의 컬럼 배열
+			const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
+			exportToExcel(fileName, sheetName, gridColumns, gridData);
+		});
+	</script>
 </th:block>
 </html>
